Write translation/post-publication logs to separate ELK cluster

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -69,27 +69,6 @@
         </record>
     </filter>
 
-    # Write logs from translation apps to different index (for Post publication project)
-    <filter kubernetes.app.**post-publication**>
-        @type record_transformer
-        @id id_kubernetes_translation_index
-        enable_ruby true
-        <record>
-            fluentd_type translate
-            europeana_cluster "#{ENV['EANA_TRANSLATE_CLUSTER']}"
-        </record>
-    </filter>
-    # Write logs from translation apps to different index (for Post publication project)
-    <filter kubernetes.app.**translat**>
-        @type record_transformer
-        @id id_kubernetes_translation_test_index
-        enable_ruby true
-        <record>
-            fluentd_type translate
-            europeana_cluster "#{ENV['EANA_TRANSLATE_CLUSTER']}"
-        </record>
-    </filter>
-
     # Discard events without fluentd_include set to "true"
     <filter kubernetes.app.**>
         @type grep
@@ -99,6 +78,35 @@
             pattern /^true$/
         </regexp>
     </filter>
+
+    # Write logs from translation apps to different index (for Post publication project)
+    <filter kubernetes.app.**post-publication**>
+        @type record_transformer
+        @id id_kubernetes_translation_index
+        enable_ruby true
+        <record>
+            fluentd_type translate
+        </record>
+    </filter>
+    # Write logs from translation apps to different index (for Post publication project)
+    <filter kubernetes.app.**translat**>
+        @type record_transformer
+        @id id_kubernetes_translation_test_index
+        enable_ruby true
+        <record>
+            fluentd_type translate
+        </record>
+    </filter>
+
+    <match kubernetes.app.**post-publication**>
+        @type relabel
+        @label @translate
+    </match>
+    <match kubernetes.app.**translat**>
+        @type relabel
+        @label @translate
+    </match>
+
 
     # Re-tag log event for routing
     <match kubernetes.app.**>
