--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -1,33 +1,54 @@
+<label @translate>
+    # Send data from post-publication translation project to separate ELK server
+    <match **>
+        @type elasticsearch
+        # format host1:port1,host2:port2,host3:port3
+        hosts "#{ENV['TRANSLATE_ELASTIC_HOST']}"
+        index_name "fluentd-k8s-translate"
+        include_timestamp true
+
+        <buffer time>
+             @type file
+             timekey 1m # chunk output per min
+             path /var/log/fluentd-buffers
+             flush_mode interval
+             flush_interval 1m
+             flush_thread_count 5
+             retry_forever
+             retry_max_interval 60
+        </buffer>
+    </match>
+</label>
+
 <label @output>
+    # Send all with @output label to Elasticsearch
+    <match **>
+        @type elasticsearch
+        # format host1:port1,host2:port2,host3:port3
+        hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
 
-  # Send all with @output label to Elasticsearch
-  <match **>
-    @type elasticsearch
-    # format host1:port1,host2:port2,host3:port3
-    hosts "#{ENV['EANA_ELASTICSEARCH_HOSTS']}"
+        # append values of "fluent_type" and europeana_cluster properties to index name
+        # by default, fluent_type is either "app" or "ingress"
+        # europeana_cluster is either "test" or "production"
+        index_name "fluentd-k8s-${fluentd_type}-${europeana_cluster}"
+        include_timestamp true
 
-    # append values of "fluent_type" and europeana_cluster properties to index name
-    # by default, fluent_type is either "app" or "ingress"
-    # europeana_cluster is either "test" or "production"
-    index_name "fluentd-k8s-${fluentd_type}-${europeana_cluster}"
-    include_timestamp true
-
-   <buffer europeana_cluster, fluentd_type, time>
-         @type file
-         timekey 1m # chunk output per min
-         path /var/log/fluentd-buffers
-         flush_mode interval
-         flush_interval 1m
-         flush_thread_count 5
-         retry_forever
-         retry_max_interval 60
-   </buffer>
-  </match>
+        <buffer europeana_cluster, fluentd_type, time>
+             @type file
+             timekey 1m # chunk output per min
+             path /var/log/fluentd-buffers
+             flush_mode interval
+             flush_interval 1m
+             flush_thread_count 5
+             retry_forever
+             retry_max_interval 60
+        </buffer>
+    </match>
 </label>
 
 <label @FLUENT_LOG>
-  # Log everything else to the console
-  <match **>
-    @type stdout
-  </match>
+    # Log everything else to the console
+    <match **>
+        @type stdout
+    </match>
 </label>
