Environment variable to set ELK host for translations

--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -3,7 +3,7 @@
     <match **>
         @type elasticsearch
         # format host1:port1,host2:port2,host3:port3
-        hosts "#{ENV['TRANSLATE_ELASTIC_HOST']}"
+        hosts "#{ENV['EANA_TRANSLATE_ELK_HOST']}"
         index_name "fluentd-k8s-translate"
         include_timestamp true
 
