Trying to fix warning about chunk_keys

--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -7,7 +7,7 @@
         index_name "fluentd-k8s-translate"
         include_timestamp true
 
-        <buffer time>
+        <buffer europeana_cluster, fluentd_type, time>
              @type file
              timekey 1m # chunk output per min
              path /var/log/fluentd-buffers
