Trying to fix warning about chunk_keys

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -113,13 +113,13 @@
         @type rewrite_tag_filter
         @id kubernetes_multiline_routing
         # Re-tag events with fluentd_multiline: false as "plain.*"
-        <rule>
+        <rule tag>
             key fluentd_multiline
             pattern /^false$/
             tag plain.${tag}
         </rule>
         # Re-tag events with fluentd_multiline: true as "multiline.*"
-        <rule>
+        <rule tag>
             key fluentd_multiline
             pattern /^false$/
             invert true
