Revert back to working configuration

--- a/fluentd/kustomize/base/conf/apps.conf
+++ b/fluentd/kustomize/base/conf/apps.conf
@@ -69,16 +69,6 @@
         </record>
     </filter>
 
-    # Discard events without fluentd_include set to "true"
-    <filter kubernetes.app.**>
-        @type grep
-        @id id_grep.fluentd_include
-        <regexp>
-            key fluentd_include
-            pattern /^true$/
-        </regexp>
-    </filter>
-
     # Write logs from translation apps to different index (for Post publication project)
     <filter kubernetes.app.**post-publication**>
         @type record_transformer
@@ -98,28 +88,28 @@
         </record>
     </filter>
 
-    <match kubernetes.app.**post-publication**>
-        @type relabel
-        @label @translate
-    </match>
-    <match kubernetes.app.**translat**>
-        @type relabel
-        @label @translate
-    </match>
-
+    # Discard events without fluentd_include set to "true"
+    <filter kubernetes.app.**>
+        @type grep
+        @id id_grep.fluentd_include
+        <regexp>
+            key fluentd_include
+            pattern /^true$/
+        </regexp>
+    </filter>
 
     # Re-tag log event for routing
     <match kubernetes.app.**>
         @type rewrite_tag_filter
         @id kubernetes_multiline_routing
         # Re-tag events with fluentd_multiline: false as "plain.*"
-        <rule tag>
+        <rule>
             key fluentd_multiline
             pattern /^false$/
             tag plain.${tag}
         </rule>
         # Re-tag events with fluentd_multiline: true as "multiline.*"
-        <rule tag>
+        <rule>
             key fluentd_multiline
             pattern /^false$/
             invert true
