--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -1,24 +1,24 @@
-# <label @translate>
-#     # Send data from post-publication translation project to separate ELK server
-#     <match **>
-#         @type elasticsearch
-#         # format host1:port1,host2:port2,host3:port3
-#         hosts "#{ENV['EANA_TRANSLATE_ELK_HOST']}"
-#         index_name "fluentd-k8s-translate"
-#         include_timestamp true
-#
-#         <buffer europeana_cluster, fluentd_type, time>
-#              @type file
-#              timekey 1m # chunk output per min
-#              path /var/log/fluentd-buffers
-#              flush_mode interval
-#              flush_interval 1m
-#              flush_thread_count 5
-#              retry_forever
-#              retry_max_interval 60
-#         </buffer>
-#     </match>
-# </label>
+<label @translate>
+    # Send data from post-publication translation project to separate ELK server
+    <match **>
+        @type elasticsearch
+        # format host1:port1,host2:port2,host3:port3
+        hosts "#{ENV['EANA_TRANSLATE_ELK_HOST']}"
+        index_name "fluentd-k8s-translate"
+        include_timestamp true
+
+        <buffer tag, time>
+             @type file
+             timekey 1m # chunk output per min
+             path /var/log/fluentd-buffers
+             flush_mode interval
+             flush_interval 1m
+             flush_thread_count 5
+             retry_forever
+             retry_max_interval 60
+        </buffer>
+    </match>
+</label>
 
 <label @output>
     # Send all with @output label to Elasticsearch
@@ -33,7 +33,7 @@
         index_name "fluentd-k8s-${fluentd_type}-${europeana_cluster}"
         include_timestamp true
 
-        <buffer europeana_cluster, fluentd_type, time>
+        <buffer tag, europeana_cluster, fluentd_type, time>
              @type file
              timekey 1m # chunk output per min
              path /var/log/fluentd-buffers
