Make translate index name configurable

--- a/fluentd/kustomize/base/conf/output.conf
+++ b/fluentd/kustomize/base/conf/output.conf
@@ -4,7 +4,7 @@
         @type elasticsearch
         # format host1:port1,host2:port2,host3:port3
         hosts "#{ENV['EANA_TRANSLATE_ELK_HOST']}"
-        index_name "fluentd-k8s-translate"
+        index_name "#{ENV['EANA_TRANSLATE_INDEX']}"
         include_timestamp true
 
         <buffer tag, time>
