chore: correct YAML syntax

--- a/.github/workflows/digital-ocean.yml
+++ b/.github/workflows/digital-ocean.yml
@@ -4,27 +4,28 @@
 
 name: DigitalOcean
 
-on: workflow_dispatch
-  inputs:
-    k8s-cluster-name:
-      description: 'Cluster name'
-      required: true
-    k8s-cluster-region:
-      description: 'Cluster region (fra1/ams3)'
-      required: true
-      default: fra1
-    k8s-cluster-version:
-      description: 'Cluster version (1.25/1.26/1.27)'
-      required: true
-      default: 1.25
-    k8s-node-size:
-      description: 'Node size (s-2vcpu-4gb/s-4vcpu-8gb/s-8vcpu-16gb)'
-      required: true
-      default: s-2vcpu-4gb
-    k8s-node-count:
-      description: 'Node count'
-      required: true
-      default: '3'
+on:
+  workflow_dispatch:
+    inputs:
+      k8s-cluster-name:
+        description: 'Cluster name'
+        required: true
+      k8s-cluster-region:
+        description: 'Cluster region (fra1/ams3)'
+        required: true
+        default: fra1
+      k8s-cluster-version:
+        description: 'Cluster version (1.25/1.26/1.27)'
+        required: true
+        default: 1.25
+      k8s-node-size:
+        description: 'Node size (s-2vcpu-4gb/s-4vcpu-8gb/s-8vcpu-16gb)'
+        required: true
+        default: s-2vcpu-4gb
+      k8s-node-count:
+        description: 'Node count'
+        required: true
+        default: '3'
 
 env:
   DOCTL_VERSION: 1.97.0
