--- a/.github/workflows/digital-ocean.yml
+++ b/.github/workflows/digital-ocean.yml
@@ -39,5 +39,6 @@ jobs:
         run: |
           wget --quiet https://github.com/digitalocean/doctl/releases/download/v${DOCTL_VERSION}/doctl-${DOCTL_VERSION}-linux-amd64.tar.gz
           tar xf doctl-${DOCTL_VERSION}-linux-amd64.tar.gz
+          mv doctl /usr/local/bin
           rm doctl-${DOCTL_VERSION}-linux-amd64.tar.gz
           doctl version
