--- a/fluentd/kustomize/base/conf/ingress.conf
+++ b/fluentd/kustomize/base/conf/ingress.conf
@@ -46,6 +46,16 @@
         </record>
     </filter>
 
+    # Discard events without fluentd_ingress set to "true"
+    <filter kubernetes.ingress.**>
+       @type grep
+       @id id_grep.fluentd_ingress
+       <regexp>
+          key fluentd_ingress
+          pattern /^true$/
+       </regexp>
+    </filter>
+
     <filter kubernetes.ingress.**>
         @type geoip
         geoip_lookup_keys client-ipv4
